OO-4794, OO-4545, OO-1643: decouple identity name from login
Login happens only with authentication informations, identity name is
now only used for legacy directory name. User name of authentication can
be changed. LDAP users can be imported with LDAP::ldapUid. Users can be
imported in courses, groups... with First name last name.